2007-10-17  Michael Stucki  <michael@typo3.org>

	* Takeover by the DAM development team

2007-04-07  Rene Fritz  <r.fritz@colorcube.de>

	* Fix: 5301: DAM 1.1 Beta5 dam_ttcontent does not respect multi-language records (changed to use 'media' object which fetches the right language in FE automatically)

2007-02-21  Rene Fritz  <r.fritz@colorcube.de>

	* Added: modifications to the page module (XCLASS) to enable the display of thumbnails.

2007-02-16  Rene Fritz  <r.fritz@colorcube.de>

	* Change: remove mmforeign dependency
	* Added: use ext_update.php to create warnings in EM when needed: mmforeign or T3 4.1.